component_analysis/python_antlr/src/main/java/antlr4py/Python3Parser.java
// Generated from Python3Parser.g4 by ANTLR 4.13.0
package antlr4py;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class Python3Parser extends Python3ParserBase {
	static { RuntimeMetaData.checkVersion("4.13.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INDENT=1, DEDENT=2, PRETRAIN_FUNC=3, STRING=4, NUMBER=5, INTEGER=6, AND=7, 
		AS=8, ASSERT=9, ASYNC=10, AWAIT=11, BREAK=12, CASE=13, CLASS=14, CONTINUE=15, 
		DEF=16, DEL=17, ELIF=18, ELSE=19, EXCEPT=20, FALSE=21, FINALLY=22, FOR=23, 
		FROM=24, GLOBAL=25, IF=26, IMPORT=27, IN=28, IS=29, LAMBDA=30, MATCH=31, 
		NONE=32, NONLOCAL=33, NOT=34, OR=35, PASS=36, RAISE=37, RETURN=38, TRUE=39, 
		TRY=40, UNDERSCORE=41, WHILE=42, WITH=43, YIELD=44, NEWLINE=45, NAME=46, 
		STRING_LITERAL=47, BYTES_LITERAL=48, DECIMAL_INTEGER=49, OCT_INTEGER=50, 
		HEX_INTEGER=51, BIN_INTEGER=52, FLOAT_NUMBER=53, IMAG_NUMBER=54, DOT=55, 
		ELLIPSIS=56, STAR=57, OPEN_PAREN=58, CLOSE_PAREN=59, COMMA=60, COLON=61, 
		SEMI_COLON=62, POWER=63, ASSIGN=64, OPEN_BRACK=65, CLOSE_BRACK=66, OR_OP=67, 
		XOR=68, AND_OP=69, LEFT_SHIFT=70, RIGHT_SHIFT=71, ADD=72, MINUS=73, DIV=74, 
		MOD=75, IDIV=76, NOT_OP=77, OPEN_BRACE=78, CLOSE_BRACE=79, LESS_THAN=80, 
		GREATER_THAN=81, EQUALS=82, GT_EQ=83, LT_EQ=84, NOT_EQ_1=85, NOT_EQ_2=86, 
		AT=87, ARROW=88, ADD_ASSIGN=89, SUB_ASSIGN=90, MULT_ASSIGN=91, AT_ASSIGN=92, 
		DIV_ASSIGN=93, MOD_ASSIGN=94, AND_ASSIGN=95, OR_ASSIGN=96, XOR_ASSIGN=97, 
		LEFT_SHIFT_ASSIGN=98, RIGHT_SHIFT_ASSIGN=99, POWER_ASSIGN=100, IDIV_ASSIGN=101, 
		SKIP_=102, UNKNOWN_CHAR=103;
	public static final int
		RULE_single_input = 0, RULE_file_input = 1, RULE_eval_input = 2, RULE_decorator = 3, 
		RULE_dotted_name_decoretor = 4, RULE_decorators = 5, RULE_decorated = 6, 
		RULE_async_funcdef = 7, RULE_funcdef = 8, RULE_parameters = 9, RULE_typedargslist = 10, 
		RULE_tfpdef = 11, RULE_varargslist = 12, RULE_vfpdef = 13, RULE_stmt = 14, 
		RULE_simple_stmts = 15, RULE_simple_stmt = 16, RULE_string_stmt = 17, 
		RULE_expr_stmt = 18, RULE_annassign = 19, RULE_testlist_star_expr = 20, 
		RULE_augassign = 21, RULE_del_stmt = 22, RULE_pass_stmt = 23, RULE_flow_stmt = 24, 
		RULE_break_stmt = 25, RULE_continue_stmt = 26, RULE_return_stmt = 27, 
		RULE_yield_stmt = 28, RULE_raise_stmt = 29, RULE_import_stmt = 30, RULE_import_name = 31, 
		RULE_import_from = 32, RULE_import_as_name = 33, RULE_dotted_as_name = 34, 
		RULE_import_as_names = 35, RULE_dotted_as_names = 36, RULE_dotted_name = 37, 
		RULE_global_stmt = 38, RULE_nonlocal_stmt = 39, RULE_assert_stmt = 40, 
		RULE_compound_stmt = 41, RULE_async_stmt = 42, RULE_if_stmt = 43, RULE_while_stmt = 44, 
		RULE_for_stmt = 45, RULE_try_stmt = 46, RULE_with_stmt = 47, RULE_with_item = 48, 
		RULE_except_clause = 49, RULE_block = 50, RULE_match_stmt = 51, RULE_subject_expr = 52, 
		RULE_star_named_expressions = 53, RULE_star_named_expression = 54, RULE_case_block = 55, 
		RULE_guard = 56, RULE_patterns = 57, RULE_pattern = 58, RULE_as_pattern = 59, 
		RULE_or_pattern = 60, RULE_closed_pattern = 61, RULE_literal_pattern = 62, 
		RULE_literal_expr = 63, RULE_complex_number = 64, RULE_signed_number = 65, 
		RULE_signed_real_number = 66, RULE_real_number = 67, RULE_imaginary_number = 68, 
		RULE_capture_pattern = 69, RULE_pattern_capture_target = 70, RULE_wildcard_pattern = 71, 
		RULE_value_pattern = 72, RULE_attr = 73, RULE_name_or_attr = 74, RULE_group_pattern = 75, 
		RULE_sequence_pattern = 76, RULE_open_sequence_pattern = 77, RULE_maybe_sequence_pattern = 78, 
		RULE_maybe_star_pattern = 79, RULE_star_pattern = 80, RULE_mapping_pattern = 81, 
		RULE_items_pattern = 82, RULE_key_value_pattern = 83, RULE_double_star_pattern = 84, 
		RULE_class_pattern = 85, RULE_positional_patterns = 86, RULE_keyword_patterns = 87, 
		RULE_keyword_pattern = 88, RULE_test = 89, RULE_test_nocond = 90, RULE_lambdef = 91, 
		RULE_lambdef_nocond = 92, RULE_or_test = 93, RULE_and_test = 94, RULE_not_test = 95, 
		RULE_comparison = 96, RULE_comp_op = 97, RULE_star_expr = 98, RULE_expr = 99, 
		RULE_xor_expr = 100, RULE_and_expr = 101, RULE_shift_expr = 102, RULE_arith_expr = 103, 
		RULE_term = 104, RULE_factor = 105, RULE_power = 106, RULE_atom_expr = 107, 
		RULE_atom = 108, RULE_name = 109, RULE_testlist_comp = 110, RULE_trailer = 111, 
		RULE_subscriptlist = 112, RULE_subscript_ = 113, RULE_sliceop = 114, RULE_exprlist = 115, 
		RULE_testlist = 116, RULE_dictorsetmaker = 117, RULE_classdef = 118, RULE_arglist = 119, 
		RULE_argument = 120, RULE_comp_iter = 121, RULE_comp_for = 122, RULE_comp_if = 123, 
		RULE_encoding_decl = 124, RULE_yield_expr = 125, RULE_yield_arg = 126, 
		RULE_strings = 127;
	private static String[] makeRuleNames() {
		return new String[] {
			"single_input", "file_input", "eval_input", "decorator", "dotted_name_decoretor", 
			"decorators", "decorated", "async_funcdef", "funcdef", "parameters", 
			"typedargslist", "tfpdef", "varargslist", "vfpdef", "stmt", "simple_stmts", 
			"simple_stmt", "string_stmt", "expr_stmt", "annassign", "testlist_star_expr", 
			"augassign", "del_stmt", "pass_stmt", "flow_stmt", "break_stmt", "continue_stmt", 
			"return_stmt", "yield_stmt", "raise_stmt", "import_stmt", "import_name", 
			"import_from", "import_as_name", "dotted_as_name", "import_as_names", 
			"dotted_as_names", "dotted_name", "global_stmt", "nonlocal_stmt", "assert_stmt", 
			"compound_stmt", "async_stmt", "if_stmt", "while_stmt", "for_stmt", "try_stmt", 
			"with_stmt", "with_item", "except_clause", "block", "match_stmt", "subject_expr", 
			"star_named_expressions", "star_named_expression", "case_block", "guard", 
			"patterns", "pattern", "as_pattern", "or_pattern", "closed_pattern", 
			"literal_pattern", "literal_expr", "complex_number", "signed_number", 
			"signed_real_number", "real_number", "imaginary_number", "capture_pattern", 
			"pattern_capture_target", "wildcard_pattern", "value_pattern", "attr", 
			"name_or_attr", "group_pattern", "sequence_pattern", "open_sequence_pattern", 
			"maybe_sequence_pattern", "maybe_star_pattern", "star_pattern", "mapping_pattern", 
			"items_pattern", "key_value_pattern", "double_star_pattern", "class_pattern", 
			"positional_patterns", "keyword_patterns", "keyword_pattern", "test", 
			"test_nocond", "lambdef", "lambdef_nocond", "or_test", "and_test", "not_test", 
			"comparison", "comp_op", "star_expr", "expr", "xor_expr", "and_expr", 
			"shift_expr", "arith_expr", "term", "factor", "power", "atom_expr", "atom", 
			"name", "testlist_comp", "trailer", "subscriptlist", "subscript_", "sliceop", 
			"exprlist", "testlist", "dictorsetmaker", "classdef", "arglist", "argument", 
			"comp_iter", "comp_for", "comp_if", "encoding_decl", "yield_expr", "yield_arg", 
			"strings"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, "'and'", "'as'", "'assert'", 
			"'async'", "'await'", "'break'", "'case'", "'class'", "'continue'", "'def'", 
			"'del'", "'elif'", "'else'", "'except'", "'False'", "'finally'", "'for'", 
			"'from'", "'global'", "'if'", "'import'", "'in'", "'is'", "'lambda'", 
			"'match'", "'None'", "'nonlocal'", "'not'", "'or'", "'pass'", "'raise'", 
			"'return'", "'True'", "'try'", "'_'", "'while'", "'with'", "'yield'", 
			null, null, null, null, null, null, null, null, null, null, "'.'", "'...'", 
			"'*'", "'('", "')'", "','", "':'", "';'", "'**'", "'='", "'['", "']'", 
			"'|'", "'^'", "'&'", "'<<'", "'>>'", "'+'", "'-'", "'/'", "'%'", "'//'", 
			"'~'", "'{'", "'}'", "'<'", "'>'", "'=='", "'>='", "'<='", "'<>'", "'!='", 
			"'@'", "'->'", "'+='", "'-='", "'*='", "'@='", "'/='", "'%='", "'&='", 
			"'|='", "'^='", "'<<='", "'>>='", "'**='", "'//='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INDENT", "DEDENT", "PRETRAIN_FUNC", "STRING", "NUMBER", "INTEGER", 
			"AND", "AS", "ASSERT", "ASYNC", "AWAIT", "BREAK", "CASE", "CLASS", "CONTINUE", 
			"DEF", "DEL", "ELIF", "ELSE", "EXCEPT", "FALSE", "FINALLY", "FOR", "FROM", 
			"GLOBAL", "IF", "IMPORT", "IN", "IS", "LAMBDA", "MATCH", "NONE", "NONLOCAL", 
			"NOT", "OR", "PASS", "RAISE", "RETURN", "TRUE", "TRY", "UNDERSCORE", 
			"WHILE", "WITH", "YIELD", "NEWLINE", "NAME", "STRING_LITERAL", "BYTES_LITERAL", 
			"DECIMAL_INTEGER", "OCT_INTEGER", "HEX_INTEGER", "BIN_INTEGER", "FLOAT_NUMBER", 
			"IMAG_NUMBER", "DOT", "ELLIPSIS", "STAR", "OPEN_PAREN", "CLOSE_PAREN", 
			"COMMA", "COLON", "SEMI_COLON", "POWER", "ASSIGN", "OPEN_BRACK", "CLOSE_BRACK", 
			"OR_OP", "XOR", "AND_OP", "LEFT_SHIFT", "RIGHT_SHIFT", "ADD", "MINUS", 
			"DIV", "MOD", "IDIV", "NOT_OP", "OPEN_BRACE", "CLOSE_BRACE", "LESS_THAN", 
			"GREATER_THAN", "EQUALS", "GT_EQ", "LT_EQ", "NOT_EQ_1", "NOT_EQ_2", "AT", 
			"ARROW", "ADD_ASSIGN", "SUB_ASSIGN", "MULT_ASSIGN", "AT_ASSIGN", "DIV_ASSIGN", 
			"MOD_ASSIGN", "AND_ASSIGN", "OR_ASSIGN", "XOR_ASSIGN", "LEFT_SHIFT_ASSIGN", 
			"RIGHT_SHIFT_ASSIGN", "POWER_ASSIGN", "IDIV_ASSIGN", "SKIP_", "UNKNOWN_CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Python3Parser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Python3Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Single_inputContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(Python3Parser.NEWLINE, 0); }
		public Simple_stmtsContext simple_stmts() {
			return getRuleContext(Simple_stmtsContext.class,0);
		}
		public Compound_stmtContext compound_stmt() {
			return getRuleContext(Compound_stmtContext.class,0);
		}
		public Single_inputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_single_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Python3ParserListener ) ((Python3ParserListener)listener).enterSingle_input(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Python3ParserListener ) ((Python3ParserListener)listener).exitSingle_input(this);
		}
	}

	public final Single_inputContext single_input() throws RecognitionException {
		Single_inputContext _localctx = new Single_inputContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_single_input);
		try {
			setState(261);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(256);
				match(NEWLINE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(257);
				simple_stmts();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(258);
				compound_stmt();
				setState(259);
				match(NEWLINE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class File_inputContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(Python3Parser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(Python3Parser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(Python3Parser.NEWLINE, i);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public File_inputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Python3ParserListener ) ((Python3ParserListener)listener).enterFile_input(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Python3ParserListener ) ((Python3ParserListener)listener).exitFile_input(this);
		}
	}

	public final File_inputContext file_input() throws RecognitionException {
		File_inputContext _localctx = new File_inputContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_file_input);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(267);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 504543860582768184L) != 0) || ((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & 4206977L) != 0)) {
				{
				setState(265);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case NEWLINE:
					{
					setState(263);
					match(NEWLINE);
					}
					break;
				case PRETRAIN_FUNC:
				case STRING:
				case NUMBER:
				case ASSERT:
				case ASYNC:
				case AWAIT:
				case BREAK:
				case CLASS:
				case CONTINUE:
				case DEF:
				case DEL:
				case FALSE:
				case FOR:
				case FROM:
				case GLOBAL:
				case IF:
				case IMPORT:
				case LAMBDA:
				case MATCH:
				case NONE:
				case NONLOCAL:
				case NOT:
				case PASS:
				case RAISE:
				case RETURN:
				case TRUE:
				case TRY:
				case UNDERSCORE:
				case WHILE:
				case WITH:
				case YIELD:
				case NAME:
				case ELLIPSIS:
				case STAR:
				case OPEN_PAREN:
				case OPEN_BRACK:
				case ADD:
				case MINUS:
				case NOT_OP:
				case OPEN_BRACE:
				case AT:
					{
					setState(264);
					stmt();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(269);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(270);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Eval_inputContext extends ParserRuleContext {
		public TestlistContext testlist() {
			return getRuleContext(TestlistContext.class,0);
		}
		public TerminalNode EOF() { return getToken(Python3Parser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(Python3Parser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(Python3Parser.NEWLINE, i);
		}
		public Eval_inputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eval_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Python3ParserListener ) ((Python3ParserListener)listener).enterEval_input(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Python3ParserListener ) ((Python3ParserListener)listener).exitEval_input(this);
		}
	}

	public final Eval_inputContext eval_input() throws RecognitionException {
		Eval_inputContext _localctx = new Eval_inputContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_eval_input);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(272);
			testlist();
			setState(276);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(273);
				match(NEWLINE);
				}
				}
				setState(278);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(279);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DecoratorContext extends ParserRuleContext {
		public TerminalNode AT() { return getToken(Python3Parser.AT, 0); }
		public Dotted_name_decoretorContext dotted_name_decoretor() {
			return getRuleContext(Dotted_name_decoretorContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(Python3Parser.NEWLINE, 0); }
		public TerminalNode OPEN_PAREN() { return getToken(Python3Parser.OPEN_PAREN, 0); }
		public TerminalNode CLOSE_PAREN() { return getToken(Python3Parser.CLOSE_PAREN, 0); }
		public ArglistContext arglist() {
			return getRuleContext(ArglistContext.class,0);
		}
		public DecoratorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decorator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Python3ParserListener ) ((Python3ParserListener)listener).enterDecorator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Python3ParserListener ) ((Python3ParserListener)listener).exitDecorator(this);
		}
	}
